--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^7.3.2",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "movie-trailer": "^3.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
