--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -2,11 +2,14 @@
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://medoshaweb.github.io/netflix-clone/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -30,6 +33,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
   }
