--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://medoshaweb.github.io/Netflix-Clone/netflix-clone",
+  "homepage": "https://medoshaweb.github.io/Netflix-Clone/",
   "type": "module",
   "scripts": {
     "dev": "vite",
